--- a/index.html
+++ b/index.html
@@ -25,36 +25,37 @@
               <label class="form-check-label">
                   <img src="./img/tomato.svg" alt="">
                   Tomato
-                <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="checkedValue">
+                <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="">
               </label>
               <label class="form-check-label">
                   <img src="./img/cheese.svg" alt="">
                 Cheese
-              <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="checkedValue">
+              <input type="checkbox" class="form-check-input" name="pomodori" id="formaggio" value="">
             </label>
             <label class="form-check-label">
                 <img src="./img/fried-egg.svg" alt="">
                 Egg
-              <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="checkedValue">
+              <input type="checkbox" class="form-check-input" name="pomodori" id="uova" value="">
             </label>
 
 
             <label class="form-check-label">
                 <img src="./img/mustard.svg" alt="">
                 Mustard
-              <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="checkedValue">
+              <input type="checkbox" class="form-check-input" name="pomodori" id="mostarda" value="">
             </label>
             <label class="form-check-label">
                 <img src="./img/lettuce.svg" alt="">
                 Lettuce
-              <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="checkedValue">
+              <input type="checkbox" class="form-check-input" name="pomodori" id="lattuga" value="">
             </label>
             <label class="form-check-label">
                 <img src="./img/ketchup.svg" alt="">
                 Ketchup
-              <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="checkedValue">
+              <input type="checkbox" class="form-check-input" name="pomodori" id="ketchup" value="">
             </label>
         </div>
+        <button id="crea">Generate</button>
         </form>
     </main>
         <!-- Main -->
@@ -67,6 +68,6 @@
     
 
 
-    <script src="main.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
