perché non prende il value?

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- /header -->
         <!-- Main -->
     <main>
-        <form action="">
+        <form action="" id="userSelect">
             <div class="form-check">
               <label class="form-check-label">
                   <img src="./img/tomato.svg" alt="">
