ciclo all'interno del nuovo array

--- a/index.html
+++ b/index.html
@@ -25,37 +25,37 @@
               <label class="form-check-label">
                   <img src="./img/tomato.svg" alt="">
                   Tomato
-                <input type="checkbox" class="form-check-input" name="pomodori" id="pomodori" value="">
+                  <input type="checkbox" class="ingredient-checkbox" id="tomato" value="1">
               </label>
               <label class="form-check-label">
                   <img src="./img/cheese.svg" alt="">
                 Cheese
-              <input type="checkbox" class="form-check-input" name="pomodori" id="formaggio" value="">
+                <input type="checkbox" class="ingredient-checkbox" id="cheese" value="5">
             </label>
             <label class="form-check-label">
                 <img src="./img/fried-egg.svg" alt="">
                 Egg
-              <input type="checkbox" class="form-check-input" name="pomodori" id="uova" value="">
+                <input type="checkbox" class="ingredient-checkbox" id="egg" value="5">
             </label>
 
 
             <label class="form-check-label">
                 <img src="./img/mustard.svg" alt="">
                 Mustard
-              <input type="checkbox" class="form-check-input" name="pomodori" id="mostarda" value="">
+                <input type="checkbox" class="ingredient-checkbox" id="mustard" value="1">
             </label>
             <label class="form-check-label">
                 <img src="./img/lettuce.svg" alt="">
                 Lettuce
-              <input type="checkbox" class="form-check-input" name="pomodori" id="lattuga" value="">
+                <input type="checkbox" class="ingredient-checkbox" id="lettuce" value="5">
             </label>
             <label class="form-check-label">
                 <img src="./img/ketchup.svg" alt="">
                 Ketchup
-              <input type="checkbox" class="form-check-input" name="pomodori" id="ketchup" value="">
+                <input type="checkbox" class="ingredient-checkbox" id="ketchup" value="1">
             </label>
         </div>
-        <button id="crea">Generate</button>
+        <input type="button" value="generate" id="crea">
         </form>
     </main>
         <!-- Main -->
