il programma aggiunge il valore alla fine del prezzo base

--- a/index.html
+++ b/index.html
@@ -55,19 +55,23 @@
                 <input type="checkbox" class="ingredient-checkbox" id="ketchup" value="1">
             </label>
         </div>
-        <input type="button" value="generate" id="crea">
+        <input type="button" value="Generate" id="crea">
         </form>
     </main>
         <!-- Main -->
 
     <footer>
-        <span>Il prezzo del tuo hamburger è : </span>
-        <span> 71$</span>
+        <span>Il prezzo del tuo hamburger è : {{prezzoBase}} </span>
     </footer>
     </div>
     
 
 
+    <!-- VUEJS -->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+    <!-- AXIOS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <!-- MAIN JS -->
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
